[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psal"
dynamic = ["version"]
description = 'Power System Analysis using LTB'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3"
keywords = []
authors = [
  { name = "jinningwang", email = "“jinningwang@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jinningwang/psal#readme"
Issues = "https://github.com/jinningwang/psal/issues"
Source = "https://github.com/jinningwang/psal"

[tool.hatch.version]
path = "src/psal/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "kvxopt>=1.3.2.0"
  "numpy"
  "scipy"
  "pandas"
  "matplotlib"
  "psutil"
  "openpyxl"
  "andes>=1.8.7"
  "pybind11"
  "cvxpy"
  "pandapower"
  "PYPOWER"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/psal tests}"

[tool.coverage.run]
source_pkgs = ["psal", "tests"]
branch = true
parallel = true
omit = [
  "src/psal/__about__.py",
]

[tool.coverage.paths]
psal = ["src/psal", "*/psal/src/psal"]
tests = ["tests", "*/psal/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
