[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "psal"
description = "Power system analysis with LTB"
authors = [
    { name = "jinningwang", email = "jinninggm@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["powe system simulation", "psal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
    "kvxopt>=1.3.2.0",
    "numpy",
    "scipy",
    "sympy>=1.6,!=1.10.0",
    "pandas",
    "matplotlib",
    "andes>=1.8.7",
    "cvxpy",
    "ams",
    "pandapower",
    "PYPOWER",
]
dynamic = ["version"]

[tool.setuptools_scm]
# If your project is not in the root of your repository, set this to the relative path
# where your source code is located. For example, "src".
write_to = "src/_version.py"
# Optional: if you want to customize how versions are formatted
# version_scheme = "guess-next-dev"
# local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/jinningwang/psal"
